# back/routes/recipeRouter.js
@@ -1,15 +1,16 @@
 import express from "express";
 import authenticate from "../middlewares/authenticate.js";
+import upload from "../middlewares/upload.js";
 import { tryAuthenticate } from "../middlewares/authenticate.js";
-import { paramsValidationMiddleware } from "../middlewares/validationMiddleware.js";
-import { recipeIdParam } from "../schemas/recipeSchemas.js";
+import { paramsValidationMiddleware, bodyValidationMiddleware, parseBodyJsonFields } from "../middlewares/validationMiddleware.js";
+import { recipeIdParam, recipeSchema } from "../schemas/recipeSchemas.js";
 import {
-  getAllRecipesController,
   getRecipeByIdController,
   addRecipeController,
   addFavorite,
   removeFavorite,
   listFavorites,
+  deleteRecipeControlller,
 } from "../controllers/recipeControllers.js";
 import { getPopularRecipes } from '../controllers/popularRecipeControllers.js';
 import { listMyRecipes, listRecipes } from "../controllers/recipesController.js";
@@ -18,11 +19,19 @@ const router = express.Router();
 
 router.get("/", listRecipes);
 router.get("/my", authenticate, listMyRecipes);
-router.post("/", authenticate, addRecipeController);
+router.post(
+  "/",
+  authenticate,
+  upload.single("thumb"),
+  parseBodyJsonFields(['ingredients']),
+  bodyValidationMiddleware(recipeSchema),
+  addRecipeController
+);
 router.get('/popular', tryAuthenticate, getPopularRecipes);
 router.get("/favorites", authenticate, listFavorites);
 router.post("/:recipeId/favorite", paramsValidationMiddleware(recipeIdParam), authenticate, addFavorite);
 router.delete("/:recipeId/favorite", paramsValidationMiddleware(recipeIdParam), authenticate, removeFavorite);
 router.get("/:recipeId", paramsValidationMiddleware(recipeIdParam), getRecipeByIdController);
+router.delete("/:recipeId", paramsValidationMiddleware(recipeIdParam), authenticate, deleteRecipeControlller);
 
 export default router;
